@@ -35,7 +35,8 @@ WriteMakefile(
 #    'OPTIMIZE'  => '-O2',
 	'CCFLAGS'	=> '-instances=static',
     'LIBS'	=> [$libs],   # e.g., '-lm' 
-    'DEFINE'	=> '-DLINUX -D_REENTRANT -DNDEBUG',     # e.g., '-DHAVE_SOMETHING' 
+#    'DEFINE'	=> '-DLINUX -D_REENTRANT -DNDEBUG',     # e.g., '-DHAVE_SOMETHING' 
+    'DEFINE'	=> '-DLINUX -DNDEBUG',     # e.g., '-DHAVE_SOMETHING' 
     'INC'	=> $inc,     # e.g., '-I/usr/include/other' 
 #	'XSOPT' => '-C++',
 #	'TEST_FILES' => 't/*.t',
