@@ -46,6 +46,10 @@
 #include <XPath/Function.hpp>
 #include <XPath/XObjectFactory.hpp>
 
+#include <PlatformSupport/XalanOutputStreamPrintWriter.hpp>
+// #include <PlatformSupport/XalanFileOutputStream.hpp>
+#include <PlatformSupport/XalanStdOutputStream.hpp>
+
 static SV *global_flush_handler = (SV*)NULL;
 static HV *out_handler_mapping = (HV*)NULL;
 
@@ -128,15 +132,15 @@ public:
     {
         m_func_name = new char[strlen(func_name) + 1];
         strcpy(m_func_name, func_name);
-		m_func_handler = newSVsv(func_handler);
+        m_func_handler = newSVsv(func_handler);
     }
 
-	~UserDefinedFunction()
-	{
-		//PerlIO_printf(PerlIO_stderr(), "%s destroyed..\n", m_func_name);
-		delete m_func_name;
-		SvREFCNT_dec(m_func_handler);
-	}
+    ~UserDefinedFunction()
+    {
+        //PerlIO_printf(PerlIO_stderr(), "%s destroyed..\n", m_func_name);
+        delete m_func_name;
+        SvREFCNT_dec(m_func_handler);
+    }
     /**
      * Execute an XPath function object.  The function must return a valid
      * object.
@@ -467,13 +471,21 @@ transform_to_data(self, xmlsource, stylesheet)
     SV *xmlsource
     SV *stylesheet
     PREINIT:
-    int ret;
+    DOMStringPrintWriter *resultWriter = 0;
+    int ret, i;
     const char *xmlfile = "";
     const char *xslfile = "";
     XalanParsedSource *parsed_source = 0;
     XalanCompiledStylesheet *compiled_stylesheet = 0;
+
     CODE:
-    ostrstream theOutputStream;
+    XalanDOMString resDOMString, tmpDOMString;
+    char *temp_str;
+    
+    resultWriter = new DOMStringPrintWriter(resDOMString);
+    if (!resultWriter) {
+        croak("Can't create DOMStringPrintWriter object");
+    }   
 
     if (sv_isobject(xmlsource) && (SvTYPE(SvRV(xmlsource)) == SVt_PVMG))
     {
@@ -487,34 +499,47 @@ transform_to_data(self, xmlsource, stylesheet)
         compiled_stylesheet = (XalanCompiledStylesheet *)SvIV((SV*)SvRV( stylesheet ));
         ret = parsed_source ? 
         self->transform(*parsed_source, compiled_stylesheet, 
-            theOutputStream)
+            XSLTResultTarget(resultWriter))
         :
         self->transform(xmlfile, compiled_stylesheet, 
-            theOutputStream);
+            XSLTResultTarget(resultWriter));
 
     } else if (SvOK(stylesheet)) {
 
         xslfile = (const char *)SvPV(stylesheet,PL_na);
         ret = parsed_source ? 
         self->transform(*parsed_source, xslfile, 
-            theOutputStream)
+            XSLTResultTarget(resultWriter))
         :
         self->transform(xmlfile, xslfile, 
-            theOutputStream);
+            XSLTResultTarget(resultWriter));
     } else {
         if (parsed_source) {
             warn("Stylesheet is undef, accepting XML source with XSLT processing instruction\n ");
             XSRETURN_UNDEF;
         }
-        ret = self->transform(xmlfile, theOutputStream);
+        ret = self->transform(xmlfile,  XSLTResultTarget(resultWriter));
 
     }
-    theOutputStream << '\0';
-    //PerlIO_puts((PerlIO*)IoIFP( sv_2io(fh) ), theOutputStream.str());
-    if (ret == 0) 
-        RETVAL = newSVpv(theOutputStream.str(), 0);
-    else 
+    tmpDOMString = resultWriter->getString();
+
+    temp_str = new char[tmpDOMString.length() + 1];
+    for (i = 0; i < tmpDOMString.length(); i++) {
+        *(temp_str + i) = tmpDOMString[i];
+    }
+            
+    //PerlIO_printf(PerlIO_stderr(), "Pushing the result onto stack..\n");
+    
+    if (ret == 0) {
+        RETVAL = newSVpv(temp_str, tmpDOMString.length());
+        delete temp_str;
+        delete resultWriter;
+    }
+    else {
+        delete temp_str;
+        delete resultWriter;
         XSRETURN_UNDEF;
+    }
     OUTPUT:
     RETVAL
 
@@ -577,11 +602,11 @@ install_external_function(self, nspace, func_name, func_handler)
 
 void
 uninstall_external_function(self, nspace, func_name)
-	XalanTransformer *self
-	const char *nspace
-	const char *func_name
-	CODE:
-	self->uninstallExternalFunction(XalanDOMString(nspace), XalanDOMString(func_name));
+    XalanTransformer *self
+    const char *nspace
+    const char *func_name
+    CODE:
+    self->uninstallExternalFunction(XalanDOMString(nspace), XalanDOMString(func_name));
 
 void
 XalanTransformer::DESTROY()
