@@ -1,0 +1,3 @@
+<?xml version="1.0"?>
+<?xml-stylesheet type="text/xsl" href="../samples/docs/foo.xsl"?>
+<doc/>
